--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <!--Header-->
   <header>
-    <img src="./assets/images/logo.png" alt="logo da empresa">
+    <img src="./assets copy/images/logo.png" alt="logo da empresa">
     <!--Menu do Site-->
     <nav>
       <ul>
@@ -44,7 +44,7 @@
 
 <figcaption>
     <img
-    src="./assets/images/pessoas-construindo-pc.png"
+    src="./assets copy/images/pessoas-construindo-pc.png"
     alt="Vetor creator"
     />
   </figcaption>
@@ -59,7 +59,7 @@
     <ul>
       <li>
         <a href="#">
-        <img src="./assets/images/logo-insta.png"
+        <img src="./assets copy/images/logo-insta.png"
         alt="Instagram"
         />
       </a>
@@ -67,14 +67,14 @@
 
       <li>
         <a href="#">
-          <img src="./assets/images/logo-facebook.png"
+          <img src="./assets copy/images/logo-facebook.png"
           alt="Facebook" />
         </a>
       </li>
 
       <li>
 <a href="#">
-  <img src="./assets/images/logo-twitter.png"
+  <img src="./assets copy/images/logo-twitter.png"
   alt="twitter"/>
 </a>
 
